--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<nav class="nav">
 		<ul class="gnb">
 			<li class="dep1">
-				<a href="#">메뉴</a>
+				<a href="#">메뉴1</a>
 				<ul class="dep2">
 					<li><a href="#">메뉴1-1</a></li>
 					<li><a href="#">메뉴1-2</a></li>
@@ -22,9 +22,33 @@
 					<li><a href="#">메뉴1-5</a></li>
 				</ul>
 			</li>
-			<li class="dep1"><a href="#">메뉴1</a></li>
-			<li class="dep1"><a href="#">메뉴2</a></li>
-			<li class="dep1"><a href="#">메뉴3</a></li>
+			<li class="dep1"><a href="#">메뉴2</a>
+				<ul class="dep2">
+						<li><a href="#">메뉴2-1</a></li>
+						<li><a href="#">메뉴2-2</a></li>
+						<li><a href="#">메뉴2-3</a></li>
+						<li><a href="#">메뉴2-4</a></li>
+						<li><a href="#">메뉴2-5</a></li>
+					</ul>
+				</li>
+			<li class="dep1"><a href="#">메뉴3</a>				
+				<ul class="dep2">
+					<li><a href="#">메뉴3-1</a></li>
+					<li><a href="#">메뉴3-2</a></li>
+					<li><a href="#">메뉴3-3</a></li>
+					<li><a href="#">메뉴3-4</a></li>
+					<li><a href="#">메뉴3-5</a></li>
+				</ul>
+			</li>
+			<li class="dep1"><a href="#">메뉴4</a>				
+				<ul class="dep2">
+					<li><a href="#">메뉴4-1</a></li>
+					<li><a href="#">메뉴4-2</a></li>
+					<li><a href="#">메뉴4-3</a></li>
+					<li><a href="#">메뉴4-4</a></li>
+					<li><a href="#">메뉴4-5</a></li>
+				</ul>
+			</li>
 		</ul>
 	</nav>
 </body>
